# poli2

./: .gitignore  .rosinstall  .travis.yml  LICENSE  README.md  dependencies.rosinstall
Moe_01/: CMakeLists.txt  (+2 more)
poli2_description/: CMakeLists.txt  package.xml  rviz.rviz
poli2_description/launch/: display.launch  gazebo.launch
poli2_description/meshes/components/: base_plate.STL  hmi_box.STL  pillar_exterior.STL  pillar_exterior_collision.STL  pillar_plate.STL  pillar_telescope.STL  rmp_plate2.STL  rmp_plate3.STL  sonar_mount_1.STL  torso_link_collision.STL  weiss_mount.STL
poli2_description/meshes/components/neck/: base_link.STL  tilt_link.STL  tilt_link_collision.STL
poli2_description/meshes/objects/: spatula.stl
poli2_description/robots/: barton.urdf.xacro  beep.urdf.xacro  boop.urdf.xacro  jaco2_custom.xacro  jaco2_custom_wrapper.urdf  jaco2_custom_wrapper.xacro  lupe.urdf.xacro  moe.urdf.xacro  poli.urdf  poli.urdf.xacro  poli2_freight.urdf.xacro  poli2_segway.urdf.xacro  poli_wrapper.urdf.xacro  tablebot.urdf.xacro
poli2_description/urdf/: j2s7s300_robotiq.xacro
poli2_description/urdf/RMP_110/: rmp.urdf.xacro
poli2_description/urdf/freight/: freight.gazebo.xacro  freight.urdf.xacro
poli2_description/urdf/poli_components/: base_plate.urdf.xacro  neck_mount.urdf.bad_original.xacro  neck_mount.urdf.xacro  pillar.urdf.xacro  pillar_plate.urdf.xacro  rmp_plate2.urdf.xacro  rmp_plate3.urdf.xacro  torso.urdf.xacro  weiss_mount.urdf.xacro
poli2_description/urdf/poli_components/vacuum/: suction_cup.STL  suction_valve.STL  vacuum_housting.STL
poli2_description/urdf/segway_components/: battery.urdf.xacro  caster_assembly.urdf.xacro  caster_assembly_110.urdf.xacro  eci_440_spacer.urdf.xacro  hmi_box_110.urdf.xacro  hmi_plate_110.urdf.xacro  i2_wheel.urdf.xacro  inv_gearbox_ext_spacer_chassis.urdf.xacro  navigator_ui.urdf.xacro  navigator_ui_box_110.urdf.xacro  payload_mount.urdf.xacro  powerbase_110.urdf.xacro  single_spacer.urdf.xacro  std_double_spacer.urdf.xacro  std_gearbox_chassis.urdf.xacro  std_gearbox_chassis_110.urdf.xacro  ui_box_spacer_mount.urdf.xacro  x2_wheel.urdf.xacro
poli2_description/urdf/sensors/: astra.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_ust30lx.urdf.xacro  sonar.urdf.xacro
poli2_launch/: CMakeLists.txt  package.xml
poli2_launch/config/: arm_parameters.yaml  camera_params.yaml  cmd_vel_mux.yaml  diagnostics_analyzer.yaml  segmentation_params.yaml
poli2_launch/config/planner/: eband_planner.yaml
poli2_launch/launch/: arm_table.launch  base_bringup.aux.launch  base_bringup.launch  diagnostics.launch  hlpr_perception.launch  joystick_teleop.launch  kinova_arm.launch  kinova_arm_standalone.launch  machine1.launch  machine2.launch  manipulation.launch  move_base.launch  navigation.launch  octomap.launch  octomap_example.launch  orp.launch  orp_headless.launch  perception.launch  poli_simulation.launch  remote_orp.launch  robot_state_publishers.launch  robot_state_publishers.launch.xml  setup_urdf.launch  simulation.launch  tablebot_camera_position.launch.xml
poli2_launch/launch/full_robot/: robot_state_publishers.launch
poli2_launch/launch/machine1_upstart/: machine1.launch  start_roscore.launch
poli2_launch/launch/machine2_upstart/: machine2.launch
poli2_launch/launch/navigation/: map_navigation.launch
poli2_launch/launch/segway_base/: base_bringup.launch  hector_mapping.launch  segway.launch  sonar.launch
poli2_launch/launch/torso/: force_post_initialization_movement.launch  kinova_arm.launch  led_controller.launch  pillar.launch  post_initialization_movement.launch
poli2_launch/rviz/: tablebot.rviz
poli2_launch/scripts/: install_machine1_upstart  joystick_teleop.sh  keyboard_teleop.sh  launch_orp_remote.sh  planning_scene_helper.py  post_init_movement.py  reset_pillar_encoder  segbot_v3_controller  setup_barton_collision_scene.py  setup_beep_RL_table_collision_scene.py  setup_beep_collision_scene.py  setup_lupe_collision_scene.py  setup_moe_collision_scene.py  setup_tablebot_collision_scene.py  setup_tabletop_collision_example_no_walls.py
poli2_launch/scripts/arduino/led_controller/: led_controller.ino
poli2_launch/tmp/: setup_kf_replay.launch
poli2_launch/udev/: 99-pan-tilt-udev.rules
poli2_simulator/poli2_simulator/: CMakeLists.txt  package.xml
poli_launch/: CMakeLists.txt  package.xml
poli_launch/config/: amcl.yaml  cmd_vel_mux.yaml  poli_RMP.bash  segway_110_params.yaml  tilt_controller.yaml
poli_launch/config/costmap/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
poli_launch/config/planner/: eband_planner.yaml  move_base.yaml
poli_launch/launch/: base_bringup.aux.launch  base_bringup.launch  diagnostics.launch  hector_mapping.launch  kinova_arm.launch  lidar.launch  map_navigation.launch  move_base.launch  new_kinova_arm.launch  pillar.launch  poli_navigation.launch  poli_simulation.launch  post_initialization_movement.launch  rmp_base.launch  scan_merger.launch  setup_urdf.launch
poli_launch/launch/poli1_upstart/: gripper_pump.launch  led_controller.launch  pillar.launch  poli1_bringup.launch
poli_launch/launch/poli2_upstart/: poli2_bringup.launch
poli_launch/scripts/: install_poli1  launch_tilt_motor  led_eye_test.py  post_init_movement.py  segbot_v3_controller
poli_launch/scripts/arduino/led_controller/: led_controller.ino
poli_launch/udev/: 99-arduino-udev.rules  99-pan-tilt-udev.rules
poli_msgs/: CMakeLists.txt  package.xml
poli_msgs/action/: GripperPump.action
poli_msgs/srv/: GripperPump.srv  LedEar.srv  LedEye.srv
poli_navigation/poli_navigation_apps/: CMakeLists.txt  package.xml
poli_navigation/poli_navigation_apps/launch/: hector_mapping.launch  playstation_teleop.launch
poli_pan_tilt/: CMakeLists.txt  package.xml
poli_pan_tilt/config/: tilt_controller.yaml
poli_pan_tilt/include/poli_pan_tilt/: multi_port.h  position_control.h
poli_pan_tilt/launch/: pan_control.launch  pan_tilt.launch  position_control.launch  tilt_control.launch
poli_pan_tilt/scripts/: launch_tilt_motor  launch_tilt_motor.py
poli_pan_tilt/src/: position_control.cpp
(+180 files in other folders)
