<?xml version="1.0"?>
<package>
  <name>poli2_description</name>
  <version>0.0.1</version>
  <description>The poli2_description package</description>

  <maintainer email="maxwell@cs.utexas.edu">Maxwell Svetlik</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>kinova_description</run_depend>
  <run_depend>robotiq_85_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
