<?xml version="1.0"?>
<package>
  <name>poli2_launch</name>
  <version>0.0.1</version>
  <description>Launch files for various Poli2 platforms</description>

  <maintainer email="siml.utexas@gmail.com">UT SIM Lab</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>range_sensor_layer</run_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <build_depend>moveit_commander</build_depend>

  <export>
  </export>
</package>
