<?xml version="1.0"?>
<package>
  <name>poli_launch</name>
  <version>0.0.1</version>
  <description>The poli_launch package</description>

  <maintainer email="maxsvetlik@utexas.edu">Maxwell Svetlik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>segway_ros</run_depend>
  <run_depend>ros_upstart</run_depend>


  <export>
  </export>
</package>
