<?xml version="1.0"?>
<package>
  <name>poli_msgs</name>
  <version>0.0.1</version>
  <description>The poli_msgs package</description>

  <maintainer email="maxsvetlik@utexas.edu">Max Svetlik</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
