<?xml version="1.0"?>
<package>
  <name>poli_pan_tilt</name>
  <version>0.0.1</version>
  <description>The poli_pan_tilt package</description>

  <maintainer email="maxsvetlik@utexas.edu">Max Svetlik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
