<package>
  <name>poli2_simulator</name>
  <version>1.0.0</version>
  <description>Metapackage for the ROS Packages for simulation with poli2 platform</description>

  <author email="vchu@diligentrobots.com">Vivian Chu</author>
  <maintainer email="vchu@diligentrobots.com">Vivian Chu</maintainer>
  
  <url type="website">https://github.com/si-machines/poli2/wiki</url>
  <url type="bugtracker">https://github.com/si-machines/poli2/issues</url>
  <url type="repository">https://github.com/si-machines/poli2</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>poli2_gazebo</run_depend>
  <run_depend>poli2_description</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
